<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mikhailbolgov.balda.Activities.ThemesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lytAppSettingsFooterNHeader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="НАСТРОЙКИ"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/textSize1"
                android:textStyle="bold" />


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button_menu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_weight="0.1"
                    android:background="@drawable/menu_black"
                    android:tag="@string/iconTagMenu" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytAppSettingsBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/themes"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize2"
                android:textStyle="bold" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/lytAppSettingsBackgroundColors"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <mikhailbolgov.balda.ThemeView
                        android:id="@+id/lyt_theme_1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:tag="@string/theme1"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/theme1"
                            android:tag="@string/tagTextWhite" />
                    </mikhailbolgov.balda.ThemeView>

                    <mikhailbolgov.balda.ThemeView
                        android:id="@+id/lyt_theme_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:tag="@string/theme2"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/theme2"
                            android:tag="@string/tagTextWhite" />
                    </mikhailbolgov.balda.ThemeView>

                    <mikhailbolgov.balda.ThemeView
                        android:id="@+id/lyt_theme_3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:tag="@string/theme3"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/theme3"
                            android:tag="@string/tagTextWhite" />
                    </mikhailbolgov.balda.ThemeView>

                    <mikhailbolgov.balda.ThemeView
                        android:id="@+id/lyt_theme_4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:tag="@string/theme4"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/theme4"
                            android:tag="@string/tagTextBlack" />

                    </mikhailbolgov.balda.ThemeView>

                    <mikhailbolgov.balda.ThemeView
                        android:id="@+id/lyt_theme_5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:tag="@string/theme5"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/theme5"
                            android:tag="@string/tagTextWhite" />
                    </mikhailbolgov.balda.ThemeView>
                </LinearLayout>
            </HorizontalScrollView>


            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="left|fill_vertical"
                    android:text="Использовать жирный шрифт"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize2" />

                <CheckBox
                    android:id="@+id/bold_font"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.7" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
